style.css
/* Body Style */

body {
    /* Aesthetics choice */
    background-color: #cbe896;
    /* Makes body a flex container and its children flex items */
    display: flex;
    /* Column to help stick footer at bottom of page */
    flex-direction: column;
}

/* Header Style */

header {
    background-color: #fcdfa6;
    /* Makes header a flex container, children will be flex items */
    display: flex;
    /* Aesthetics choice */
    justify-content: space-around;
}

h1 {
    /* Aesthetics choice */
    text-align: center;
    font-size: 24px;
}

a:link {
    /* Removes underlines from links */
    text-decoration: none;
}

.links {
    /* Makes a flex container and its children flex items */
    display: flex;
}

a {
    /* Change link text color from default blue to black */
    color: black;
}

ul {
    /* Places links on same line */
    display: flex;
    /* Puts spacing between links */
    gap: 12px;
    /* Aligns link text with h1 */
    align-items: center;
}

li {
    /* Removes bullet points from list */
    list-style: none;
}

/* Content Style */

.mainOne {
    /* Makes mainOne a flex container. Its children will be flex items: image and contentBox */
    display: flex;
    /* reverses start and end horizontal, from LR to RL, 1-2 --> 2-1 */
    flex-direction: row-reverse;
    justify-content: center;
    padding-top: 80px;
    padding-bottom: 80px;
    gap: 40px;
}

.imageBox {
    /* set a defined width for the image container */
    width: 500px;
}

.scale {
    /* creates responsive image within the constraint defined in the image container*/
    max-width: 100%;
}

.contentBox {
    width: 500px;
}

.content {
    font-size: 48px;
    font-weight: bolder;
}

.SubContent {
    font-size: 24px;
}

.animeButton {
    background-color: #e85d75;
    border: solid black;
    border-radius: 50%;
    font-size: 16px;
    padding: 20px;
}

.animeButtonLink {
    color: white;
}

/* mainTwo */

.mainTwo {
    display: flex;
}

.cardbox {
    display: flex;
    flex-wrap: wrap;
    gap: 12px;
}

.card {
    width: 300px;
    height: 200px;
    border: solid blue;
}

.flipbox {
    background-color: transparent;
    width: 200px;
    height: 350px;
    perspective: 1000px;
}

.flip-inner {
    position: relative;
    width: 100%;
    height: 100%;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

.flipbox:hover .flip-inner {
    transform: rotateY(180deg);
}

.flip-front, .flip-back {
    position: absolute;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
}

.flip-back {
    transform: rotateY(180deg);
}

.male, .female {
    width: 200px;
    height: 250px;
}

/* Footer Style */

footer {
    text-align: center;
}

